--- a/frontend/src/styles/layout.css
+++ b/frontend/src/styles/layout.css
@@ -8,7 +8,6 @@ body {
   max-width: var(--max-content-width);
   width: 100%;
   margin: 0 auto;
-  padding: 0 1rem;
   box-sizing: border-box;
 }
 
@@ -19,7 +18,7 @@ section {
   margin-bottom: 2rem;
   border-radius: 20px;
   text-align: center;
-  max-width: calc(100% - .8rem);
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -69,17 +68,14 @@ section > .content-wrapper > * {
   justify-content: center;
   max-width: 1200px;
   margin: 0 auto;
-  
 }
 
 .skill-category {
   text-align: center;
-  
 }
 
 .skill-category h3 {
   margin-bottom: 0.5rem;
-  
 }
 
 .skill-list {
@@ -153,14 +149,12 @@ section > .content-wrapper > * {
 #my-resume .content-wrapper {
   text-align: center;
   min-height: 1300px;
-  
 }
 
 #my-resume p {
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
-  
 }
 
 .resume-pdf-container {
@@ -193,5 +187,3 @@ section > .content-wrapper > * {
   margin-left: auto;
   margin-right: auto;
 }
-
-
